tests/parse_print/random_perturb/enum_liberated/change-02/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/change-02/change-02.essence:1:10:
language name has to be Essence, but given: EssBnce
    language EssBnce 1.3
             ^